package com.designPatterns.inheritance;

public class Main {
    public static void main(String[] args) {
        TextBox textBox = new TextBox();
        textBox.enable();

        CheckBox checkBox = new CheckBox();
        checkBox.enable();
    }
}
