package com.designPatterns.inheritance;

public class UIControl {
    void enable() {
        System.out.println("Enable");
    }
}
