package com.designPatterns.polymorphism;

public class TextBox extends UIControl {
    @Override
    public void draw() {
        System.out.println("Drawing a textbox");
    }
}
